experimenting with the new Java Vector API